# vrf-vsc-oracle

./: Cargo.toml  README.Docker.md  README.md  compose.yaml
circuits/: Nargo.toml  Prover.toml
circuits/src/: main.nr
src/: main.rs
src/contracts/: vrf.rs
src/utils/: constants.rs
