[package]
name = "event-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
target-dir = "target"
[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
ethers = { version = "2.0" ,features = ["abigen", "ipc", "rustls", "ws", "ethers-solc"] }
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
eyre = "0.6"
serde = "1"
dotenv = "0.15"
log="0.4"
serde_json = "1.0.125"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["v4", "serde"] }
encoding_rs = "0.8.31"
lazy_static = "1.4.0"
vrf = "0.2.4"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
env_logger = "0.9"
# noir_rs = { git = "https://github.com/visoftsolutions/noir_rs.git", branch = "latest", package = "noir_rs" }